--- a/.gitignore
+++ b/.gitignore
@@ -35,5 +35,5 @@ yarn-error.log*
 
 # generated service worker files for pwa
 /public/sw.js
-/public/workbox.js
-/public/fallback.js 
+/public/workbox-*.js
+/public/fallback-*.js 
